Tests , other fixes