@@ -1,5 +1,6 @@
 package gud.fun.junkdrawer.service.data;
 
+import gud.fun.junkdrawer.dto.assembler.PhoneNumberResponseDtoAssembler;
 import gud.fun.junkdrawer.dto.phonenumber.PhoneNumberRequestDto;
 import gud.fun.junkdrawer.dto.phonenumber.PhoneNumberResponseDto;
 import gud.fun.junkdrawer.persistance.model.PhoneNumber;
@@ -9,19 +10,35 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PagedResourcesAssembler;
+import org.springframework.hateoas.PagedModel;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 class PhoneNumberServiceTest {
 
     private final UUID TEST_UUID = UUID.fromString("e6c96a16-51b4-4ac7-bbe7-86e1a1f4da21");
+
+    @Mock
+    private PhoneNumberResponseDtoAssembler phoneNumberDtoAssembler;
+
+    @Mock
+    private PagedResourcesAssembler<PhoneNumber> pagedResourcesAssembler;
 
     @Mock
     private PhoneNumberRepository phoneNumberRepository;
@@ -31,6 +48,7 @@ class PhoneNumberServiceTest {
 
     private PhoneNumber phoneNumber;
     private PhoneNumberRequestDto phoneNumberRequestDto;
+    private PhoneNumberResponseDto phoneNumberResponseDto;
 
     @BeforeEach
     void setUp() {
@@ -42,6 +60,11 @@ class PhoneNumberServiceTest {
         phoneNumberRequestDto = new PhoneNumberRequestDto();
         phoneNumberRequestDto.setId(TEST_UUID);
         phoneNumberRequestDto.setPhoneNumber("1234567890");
+
+        phoneNumberResponseDto = new PhoneNumberResponseDto();
+        phoneNumberResponseDto.setId(TEST_UUID);
+        phoneNumberResponseDto.setPhoneNumber("1234567890");
+
     }
 
     @Test
@@ -72,13 +95,14 @@ class PhoneNumberServiceTest {
 
     @Test
     void testGetAll() {
-        when(phoneNumberRepository.findAll()).thenReturn(Arrays.asList(phoneNumber));
-        List<PhoneNumberResponseDto> responseDtos = phoneNumberService.getAll();
+        when(phoneNumberRepository.findAll(any(Pageable.class))).thenReturn(new PageImpl<>(Arrays.asList(phoneNumber)));
+        when(pagedResourcesAssembler.toModel(any(Page.class), any(PhoneNumberResponseDtoAssembler.class))).thenReturn(PagedModel.of(List.of(phoneNumberResponseDto), new PagedModel.PageMetadata(1, 1, 1, 1)));
+        PagedModel<PhoneNumberResponseDto> responseDtos = phoneNumberService.getAll(PageRequest.of(0,1));
+        PhoneNumberResponseDto responseDto = responseDtos.getContent().iterator().next();
+        assertEquals(phoneNumber.getId(), responseDto.getId());
+        assertEquals(phoneNumber.getPhoneNumber(), responseDto.getPhoneNumber());
 
-        assertEquals(phoneNumber.getId(), responseDtos.get(0).getId());
-        assertEquals(phoneNumber.getPhoneNumber(), responseDtos.get(0).getPhoneNumber());
-
-        verify(phoneNumberRepository, times(1)).findAll();
+        verify(phoneNumberRepository, times(1)).findAll(any(Pageable.class));
     }
 
     @Test
